# cookie-v2bot

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
config/: achievements.toml  badges.toml  cards.toml  config.toml  level.toml
src/: bot.py  cli.py  config_loader.py  core.py  database.py  gui.py
